force-app/main/default/objects/KimbleOne__InternalRevenueBehaviourRule__c/KimbleOne__InternalRevenueBehaviourRule__c.object-meta.xml
<CustomObject>
    <label>Internal Revenue Behaviour Rule</label>
    <nameField>
        <label>Int Rev Behaviour Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Internal Revenue Behaviour Rules</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>