force-app/main/default/objects/KimbleOne__InternalRevenueBehaviourRule__c/fields/KimbleOne__ApplicationModel__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ApplicationModel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application Model</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>InternalRevenueApplicationModel</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipName>IntRevenueBehaviourRulesApplicationModel</relationshipName>
    <type>Lookup</type>
</CustomField>