force-app/main/default/objects/KimbleOne__InternalRevenueBehaviourRule__c/fields/KimbleOne__CanEditInternalRevenue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CanEditInternalRevenue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Edit Internal Revenue</label>
    <type>Checkbox</type>
</CustomField>