force-app/main/default/objects/KimbleOne__InternalRevenueBehaviourRule__c/fields/KimbleOne__DefaultInternalRevenueType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DefaultInternalRevenueType__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Default Internal Revenue Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>AssignmentDefaultRevenueType</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipName>InternalRevenueBehaviourRules</relationshipName>
    <type>Lookup</type>
</CustomField>