force-app/main/default/objects/KimbleOne__InternalRevenueBehaviourRule__c/fields/KimbleOne__DisplaySequence__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DisplaySequence__c</fullName>
    <label>Display Sequence</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>