force-app/main/default/objects/KimbleOne__InternalRevenueBehaviourRule__c/fields/KimbleOne__InvoiceMode__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InvoiceMode__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Invoice Mode</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>InvoiceMode</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipName>IntRevenueBehaviourRulesInvMode</relationshipName>
    <type>Lookup</type>
</CustomField>