force-app/main/default/objects/KimbleOne__InternalRevenueBehaviourRule__c/fields/KimbleOne__InvoicePeriodType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InvoicePeriodType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Period Type</label>
    <referenceTo>KimbleOne__PeriodType__c</referenceTo>
    <relationshipName>IntRevenueBehaviourRulesInvPeriodType</relationshipName>
    <type>Lookup</type>
</CustomField>