force-app/main/default/objects/KimbleOne__InternalRevenueBehaviourRule__c/fields/KimbleOne__InvoicingPoint__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InvoicingPoint__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoicing Point</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>InvoicingPoint</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipName>IntRevenueBehaviourRulesInvPoint</relationshipName>
    <type>Lookup</type>
</CustomField>