force-app/main/default/objects/KimbleOne__InternalRevenueBehaviourRule__c/fields/KimbleOne__InvoicingRequiresCompletion__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InvoicingRequiresCompletion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoicing Requires Completion</label>
    <type>Checkbox</type>
</CustomField>