force-app/main/default/objects/KimbleOne__InternalRevenueBehaviourRule__c/fields/KimbleOne__RateCardCombinationDefinition__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RateCardCombinationDefinition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rate Card Combination Definition</label>
    <referenceTo>KimbleOne__RateCardCombinationDefinition__c</referenceTo>
    <relationshipName>InternalRevenueBehaviourRules</relationshipName>
    <type>Lookup</type>
</CustomField>