force-app/main/default/objects/KimbleOne__InternalRevenueBehaviourRule__c/fields/KimbleOne__ResourcedActivityType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ResourcedActivityType__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Resourced Activity Type</label>
    <referenceTo>KimbleOne__ResourcedActivityType__c</referenceTo>
    <relationshipLabel>Internal Revenue Behaviour Rules</relationshipLabel>
    <relationshipName>InternalRevenueBehaviourRules</relationshipName>
    <type>Lookup</type>
</CustomField>