force-app/main/default/objects/KimbleOne__InternalRevenueBehaviourRule__c/fields/KimbleOne__RevenueGenerationModel__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RevenueGenerationModel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Revenue Generation Model</label>
    <referenceTo>KimbleOne__RevenueGenerationModel__c</referenceTo>
    <relationshipName>InternalRevenueBehaviourRulesGeneration</relationshipName>
    <type>Lookup</type>
</CustomField>