force-app/main/default/objects/KimbleOne__InternalRevenueBehaviourRule__c/listViews/KimbleOne__All.listView-meta.xml
<ListView>
    <fullName>KimbleOne__All</fullName>
    <columns>NAME</columns>
    <columns>KimbleOne__ProductDomain__c</columns>
    <columns>KimbleOne__ResourcedActivityType__c</columns>
    <columns>KimbleOne__RevenueGenerationModel__c</columns>
    <columns>KimbleOne__DefaultInternalRevenueType__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>